cmake_minimum_required(VERSION 3.10)
project(cpp4javadev)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        cpp4javadev
#        main.cpp
        #        class-reference-pointer/class-instantiation-01.cpp
#        class-reference-pointer/reference-01.cpp
        class-reference-pointer/pointer-reference-01.cpp)